--- a/COMGUI/COMGUI.vcxproj.filters
+++ b/COMGUI/COMGUI.vcxproj.filters
@@ -52,4 +52,9 @@
       <Filter>Resource Files</Filter>
     </QtRcc>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="IDLL.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
