--- a/COMDLL/COMDLL.vcxproj.filters
+++ b/COMDLL/COMDLL.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="FirstDLL.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="MessageDLL.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
